project('libgme', 'c', 'cpp',
    version: '0.6.0',
)

inc = include_directories('.')

src = files(
    'gme/Z80_Cpu.cpp',
    'gme/ymz280b.c',
    'gme/Ymz280b_Emu.cpp',
    'gme/Ymf262_Emu.cpp',
    'gme/ymdeltat.cpp',
    'gme/Ym3812_Emu.cpp',
    'gme/Ym2612_Emu.cpp',

    # These files were included in the QMake build system,
    # but causes build errors due to conflicting types.
    # Ym2612_Emu.cpp includes one of these files anyway.
    # 'gme/Ym2612_Emu_MAME.cpp',
    # 'gme/Ym2612_Emu_Gens.cpp',

    'gme/Ym2610b_Emu.cpp',
    'gme/Ym2608_Emu.cpp',
    'gme/ym2413.c',
    'gme/Ym2413_Emu.cpp',
    'gme/Ym2203_Emu.cpp',
    'gme/ym2151.c',
    'gme/Ym2151_Emu.cpp',
    'gme/Vgm_Emu.cpp',
    'gme/Vgm_Core.cpp',
    'gme/Upsampler.cpp',
    'gme/Track_Filter.cpp',
    'gme/Spc_Filter.cpp',
    'gme/Spc_Emu.cpp',
    'gme/Sms_Fm_Apu.cpp',
    'gme/Sms_Apu.cpp',
    'gme/Sgc_Impl.cpp',
    'gme/Sgc_Emu.cpp',
    'gme/Sgc_Cpu.cpp',
    'gme/Sgc_Core.cpp',
    'gme/segapcm.c',
    'gme/SegaPcm_Emu.cpp',
    'gme/scd_pcm.c',
    'gme/Sap_Emu.cpp',
    'gme/Sap_Cpu.cpp',
    'gme/Sap_Core.cpp',
    'gme/Sap_Apu.cpp',
    'gme/s_opltbl.c',
    'gme/s_opl.c',
    'gme/s_logtbl.c',
    'gme/s_deltat.c',
    'gme/Rom_Data.cpp',
    'gme/Rf5C164_Emu.cpp',
    'gme/rf5c68.c',
    'gme/Rf5C68_Emu.cpp',
    'gme/Resampler.cpp',
    'gme/pwm.c',
    'gme/Pwm_Emu.cpp',
    'gme/Opl_Apu.cpp',
    'gme/okim6295.c',
    'gme/Okim6295_Emu.cpp',
    'gme/okim6258.c',
    'gme/Okim6258_Emu.cpp',
    'gme/Nsfe_Emu.cpp',
    'gme/Nsf_Impl.cpp',
    'gme/Nsf_Emu.cpp',
    'gme/Nsf_Cpu.cpp',
    'gme/Nsf_Core.cpp',
    'gme/Nes_Vrc7_Apu.cpp',
    'gme/Nes_Vrc6_Apu.cpp',
    'gme/Nes_Oscs.cpp',
    'gme/Nes_Namco_Apu.cpp',
    'gme/Nes_Fme7_Apu.cpp',
    'gme/Nes_Fds_Apu.cpp',
    'gme/Nes_Cpu.cpp',
    'gme/Nes_Apu.cpp',
    'gme/Music_Emu.cpp',
    'gme/Multi_Buffer.cpp',
    'gme/M3u_Playlist.cpp',
    'gme/Kss_Scc_Apu.cpp',
    'gme/Kss_Emu.cpp',
    'gme/Kss_Cpu.cpp',
    'gme/Kss_Core.cpp',
    'gme/k054539.c',
    'gme/K054539_Emu.cpp',
    'gme/k053260.c',
    'gme/K053260_Emu.cpp',
    'gme/k051649.c',
    'gme/K051649_Emu.cpp',
    'gme/Hes_Emu.cpp',
    'gme/Hes_Cpu.cpp',
    'gme/Hes_Core.cpp',
    'gme/Hes_Apu.cpp',
    'gme/Hes_Apu_Adpcm.cpp',
    'gme/Gym_Emu.cpp',
    'gme/gme.cpp',
    'gme/Gme_Loader.cpp',
    'gme/Gme_File.cpp',
    'gme/Gbs_Emu.cpp',
    'gme/Gbs_Cpu.cpp',
    'gme/Gbs_Core.cpp',
    'gme/Gb_Oscs.cpp',
    'gme/Gb_Cpu.cpp',
    'gme/Gb_Apu.cpp',
    'gme/fmopl.cpp',
    'gme/fm2612.c',
    'gme/fm.c',
    'gme/Fir_Resampler.cpp',
    'gme/Effects_Buffer.cpp',
    'gme/Dual_Resampler.cpp',
    'gme/Downsampler.cpp',
    'gme/dbopl.cpp',
    'gme/dac_control.c',
    'gme/Classic_Emu.cpp',
    'gme/c140.c',
    'gme/C140_Emu.cpp',
    'gme/Blip_Buffer.cpp',
    'gme/blargg_errors.cpp',
    'gme/blargg_common.cpp',
    'gme/Ay_Emu.cpp',
    'gme/Ay_Cpu.cpp',
    'gme/Ay_Core.cpp',
    'gme/Ay_Apu.cpp',
    'gme/qmix.c',
    'gme/Qsound_Apu.cpp',
    'gme/Bml_Parser.cpp',
    'gme/Spc_Sfm.cpp',
    'gme/higan/processor/spc700/spc700.cpp',
    'gme/higan/dsp/SPC_DSP.cpp',
    'gme/higan/dsp/dsp.cpp',
    'gme/higan/smp/smp.cpp',
)

fex_inc = include_directories('../File_Extractor/fex')
fex_src = files('../File_Extractor/fex/Data_Reader.cpp')

# zlib is used to load .vgz files, and maybe others.
zlib_dep = dependency('zlib')

libgme = library('gme',
    src,
    fex_src,
    cpp_args: ['-DNDEBUG', '-DHAVE_STDINT_H', '-DHAVE_ZLIB_H'],
    include_directories: [inc, fex_inc],
    dependencies: [zlib_dep]
)

libgme_dep = declare_dependency(
    compile_args: ['-DHAVE_STDINT_H', '-DHAVE_ZLIB_H'],
    include_directories: [inc, fex_inc],
    link_with: libgme,
)
